--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -12,7 +12,7 @@
     "ring": "Annamite",
     "headerTitle": "Union",
     "headerSubtitle": "Quick Reaction Force",
-    "subheaderTitle": "Releif Effort",
+    "subheaderTitle": "Relief Effort",
     "subheaderSubtitle": "Golf-Oskar-Lima-India-Alpha"
   },
   "pilotSpecialInfo": {}
