--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -13,7 +13,7 @@
     "headerTitle": "Union",
     "headerSubtitle": "Quick Reaction Force",
     "subheaderTitle": "Relief Effort",
-    "subheaderSubtitle": "Golf-Oskar-Lima-India-Alpha"
+    "subheaderSubtitle": "Cinder Squad"
   },
   "pilotSpecialInfo": {}
 }
