--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -2,7 +2,7 @@
   "initialSlug": "001",
   "planetPath": "/planet.webm",
   "animate": true,
-  "defaultTitle": "Test |",
+  "defaultTitle": "LANCER |",
   "icon": "/faction-logos/union.svg",
   "header": {
     "planet": "Cressidium",
