--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -7,8 +7,8 @@
   "header": {
     "planet": "Cressidium",
     "year": "5016u",
-    "system": "Vestan Binaria-864",
-    "gate": "Lassen Gate",
+    "system": "Kalkhas",
+    "gate": "Lassen",
     "ring": "Cascade-Line",
     "headerTitle": "Union",
     "headerSubtitle": "Lancer Squad",
