--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"vue": "^3.2.37",
 		"vue-chart-3": "^3.1.8",
 		"vue-router": "^4.1.4",
-		"vue-writer": "^2.0.2"
+		"vue-writer": "^2.0.2",
+		"papaparse": "^5.4.1"
 	},
 	"devDependencies": {
 		"@mdi/font": "^7.0.96",
