--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -3,7 +3,7 @@
   "planetPath": "/planet.webm",
   "animate": true,
   "defaultTitle": "150TH ORBAT |",
-  "icon": "/faction-logos/union.svg",
+  "icon": "/faction-logos/FUD_UNSC_Logo.png",
   "header": {
     "planet": "Unknown",
     "year": "Unknown",
