--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -8,7 +8,7 @@
     "planet": "Unknown",
     "year": "Unknown",
     "system": "Unknown",
-    "gate": "Unknown",
+    "AO": "Unknown",
     "ring": "Unknown",
     "headerTitle": "FILE TYPE",
     "headerSubtitle": "ORBAT",
