--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -5,10 +5,10 @@
   "defaultTitle": "150TH ORBAT |",
   "icon": "/faction-logos/FUD_UNSC_Logo.png",
   "header": {
-    "planet": "Unknown",
-    "year": "Unknown",
-    "system": "Unknown",
-    "AO": "Unknown",
+    "planet": "Ard tir",
+    "year": "2553",
+    "system": "Jakhari Expanse",
+    "AO": "Vidda",
     "ring": "Unknown",
     "headerTitle": "FILE TYPE",
     "headerSubtitle": "ORBAT",
