--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -9,7 +9,7 @@
     "year": "2553",
     "system": "Jakhari Expanse",
     "AO": "Vidda",
-    "ring": "Unknown",
+    "status": "Active Deployment",
     "headerTitle": "FILE TYPE",
     "headerSubtitle": "ORBAT",
     "subheaderTitle": "SECURITY CODE",
