--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -10,10 +10,8 @@
     "system": "Jakhari Expanse",
     "AO": "Vidda",
     "status": "Active Deployment",
-    "headerTitle": "FILE TYPE",
-    "headerSubtitle": "ORBAT",
-    "subheaderTitle": "SECURITY CODE",
-    "subheaderSubtitle": "LU5-Z"
+    "subheaderTitle": "150th Broadsword RRG",
+    "subheaderSubtitle": "UNSC EYES ONLY"
   },
   "pilotSpecialInfo": {}
 }
