--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,1 @@
-VITE_ADMIN_PASSHASH=<64-char SHA256 hex of your password>
-
-node -e "console.log(require('crypto').createHash('sha256').update(process.argv[1]).digest('hex'))" "plex"
+VITE_ADMIN_PLAINPASS=150th
