--- a/.github/workflows/staff-admin.yml
+++ b/.github/workflows/staff-admin.yml
@@ -12,7 +12,7 @@ on:
         description: "Username (create/update/delete)"
         required: false
       password:
-        description: "Password (create/update)"
+        description: "Password (create/update; optional for update)"
         required: false
       displayName:
         description: "Display name (create/update)"
@@ -25,9 +25,15 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Call Apps Script
+      - name: Validate secrets
+        run: |
+          test -n "${{ secrets.GAS_ENDPOINT }}" || (echo "GAS_ENDPOINT missing" && exit 1)
+          test -n "${{ secrets.GAS_SECRET }}"   || (echo "GAS_SECRET missing" && exit 1)
+          test -n "${{ secrets.GAS_ADMIN_KEY }}"|| (echo "GAS_ADMIN_KEY missing" && exit 1)
+
+      - name: Build request body
+        id: build
         env:
-          ENDPOINT: ${{ secrets.GAS_ENDPOINT }}
           SECRET:   ${{ secrets.GAS_SECRET }}
           ADMINKEY: ${{ secrets.GAS_ADMIN_KEY }}
           ACTION:   ${{ github.event.inputs.action }}
@@ -37,41 +43,46 @@ jobs:
           ROLE:     ${{ github.event.inputs.role }}
         run: |
           set -euo pipefail
+          case "$ACTION" in
+            list)
+              BODY=$(jq -n --arg s "$SECRET" --arg k "$ADMINKEY" \
+                '{secret:$s, action:"admin.staff:list", adminKey:$k}')
+              ;;
+            create)
+              BODY=$(jq -n --arg s "$SECRET" --arg k "$ADMINKEY" --arg u "$USERNAME" --arg p "$PASSWORD" --arg d "$DISPLAY" --arg r "$ROLE" \
+                '{secret:$s, action:"admin.staff:create", adminKey:$k, username:$u, password:$p, displayName:$d, role:$r}')
+              ;;
+            update)
+              BODY=$(jq -n --arg s "$SECRET" --arg k "$ADMINKEY" --arg u "$USERNAME" --arg p "$PASSWORD" --arg d "$DISPLAY" --arg r "$ROLE" \
+                '{secret:$s, action:"admin.staff:update", adminKey:$k, username:$u, displayName:$d, role:$r, newPassword:$p}')
+              ;;
+            delete)
+              BODY=$(jq -n --arg s "$SECRET" --arg k "$ADMINKEY" --arg u "$USERNAME" \
+                '{secret:$s, action:"admin.staff:delete", adminKey:$k, username:$u}')
+              ;;
+            *)
+              echo "Unknown action: $ACTION"; exit 1;;
+          esac
+          echo "body=${BODY}" >> $GITHUB_OUTPUT
+          echo "Request: $(echo "$BODY" | sed -E 's/"secret":"[^"]+"/"secret":"***"/; s/"adminKey":"[^"]+"/"adminKey":"***"/; s/"password":"[^"]+"/"password":"***"/; s/"newPassword":"[^"]+"/"newPassword":"***"/')"
 
-          build_body() {
-            case "$ACTION" in
-              list)
-                cat <<JSON
-{"secret":"${SECRET}","action":"admin.staff:list","adminKey":"${ADMINKEY}"}
-JSON
-                ;;
-              create)
-                cat <<JSON
-{"secret":"${SECRET}","action":"admin.staff:create","adminKey":"${ADMINKEY}","username":"${USERNAME}","password":"${PASSWORD}","displayName":"${DISPLAY}","role":"${ROLE}"}
-JSON
-                ;;
-              update)
-                cat <<JSON
-{"secret":"${SECRET}","action":"admin.staff:update","adminKey":"${ADMINKEY}","username":"${USERNAME}","displayName":"${DISPLAY}","role":"${ROLE}","newPassword":"${PASSWORD}"}
-JSON
-                ;;
-              delete)
-                cat <<JSON
-{"secret":"${SECRET}","action":"admin.staff:delete","adminKey":"${ADMINKEY}","username":"${USERNAME}"}
-JSON
-                ;;
-              *)
-                echo "Unknown action: $ACTION" >&2; exit 1;;
-            esac
-          }
-
-          BODY=$(build_body)
-          echo "Request: $BODY"
-
-          RES=$(curl -sS -X POST \
+      - name: Call Apps Script
+        env:
+          ENDPOINT: ${{ secrets.GAS_ENDPOINT }}
+          BODY: ${{ steps.build.outputs.body }}
+        run: |
+          set -euo pipefail
+          HTTP=$(curl -sS -w "\n%{http_code}" -X POST \
             -H 'Content-Type: text/plain;charset=utf-8' \
             --data "$BODY" \
             "$ENDPOINT")
+          STATUS=$(echo "$HTTP" | tail -n1)
+          RESP=$(echo "$HTTP" | head -n -1)
+          echo "HTTP $STATUS"
+          echo "Response: $RESP"
+          echo "$RESP" | jq .
+          test "$STATUS" = "200"
+          echo "$RESP" | grep -q '"ok":true'
 
-          echo "Response: $RES"
-          echo "$RES" | grep -q '"ok":true'
+      - name: Done
+        run: echo "Success."
