--- a/.github/workflows/staff-admin.yml
+++ b/.github/workflows/staff-admin.yml
@@ -32,7 +32,6 @@ jobs:
           test -n "${{ secrets.GAS_ADMIN_KEY }}"|| (echo "GAS_ADMIN_KEY missing" && exit 1)
 
       - name: Build request body
-        id: build
         env:
           SECRET:   ${{ secrets.GAS_SECRET }}
           ADMINKEY: ${{ secrets.GAS_ADMIN_KEY }}
@@ -63,28 +62,30 @@ jobs:
             *)
               echo "Unknown action: $ACTION"; exit 1;;
           esac
-          echo "Built request body (redacted below)"
-          # Redacted preview
-          echo "Request: $(echo "$BODY" | sed -E 's/"secret":"[^"]+"/"secret":"***"/; s/"adminKey":"[^"]+"/"adminKey":"***"/; s/"password":"[^"]+"/"password":"***"/; s/"newPassword":"[^"]+"/"newPassword":"***"/')"
-          # Persist for next step via file
           echo "$BODY" > body.json
+          echo "Request: $(cat body.json | sed -E 's/\"secret\":\"[^\"]+\"/\"secret\":\"***\"/; s/\"adminKey\":\"[^\"]+\"/\"adminKey\":\"***\"/; s/\"password\":\"[^\"]+\"/\"password\":\"***\"/; s/\"newPassword\":\"[^\"]+\"/\"newPassword\":\"***\"/')"
 
-      - name: Call Apps Script (prints HTTP + response; never masks errors)
+      - name: Call Apps Script (follows redirects)
         env:
           ENDPOINT: ${{ secrets.GAS_ENDPOINT }}
         run: |
           set -euo pipefail
-          HTTP=$(curl -sS -w "\n%{http_code}" -X POST \
+          # Follow redirects (-L); capture response and final HTTP code
+          CODE=$(curl -sS -L -o resp.txt -w "%{http_code}" \
             -H 'Content-Type: text/plain;charset=utf-8' \
             --data @body.json \
             "$ENDPOINT")
-          STATUS=$(echo "$HTTP" | tail -n1)
-          RESP=$(echo "$HTTP" | head -n -1)
-          echo "HTTP $STATUS"
-          echo "Response: $RESP"
-          # Try to pretty print JSON if possible
-          echo "$RESP" | jq . || true
-          # DO NOT fail here; we want the logs even if ok:false
+          echo "HTTP $CODE"
+          echo "Response:"
+          cat resp.txt
+          echo
+
+          # Pretty print only if the response looks like JSON
+          if head -c 1 resp.txt | grep -q '{'; then
+            cat resp.txt | jq . || true
+          fi
+
+          test "$CODE" = "200"
 
       - name: Done
         run: echo "Diagnostic run complete."
